--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="row form-group">
-            <label class="control-label col-sm-2">Date of birth*:</label>
+            <label class="control-label col-sm-2">Date of birth:</label>
             <div class="col-sm-3">
                 <div class='input-group date col-md-2' id='birthDatePicker' style="width: 100%">
                     <input type="text" class="form-control" id="birthDate" name="birthDate" style="font-size: small" [(ngModel)]="employee.birthDate" #birthDate="ngModel"/>
