--- a/nicnbk-ui-angular2/src/app/authentication/view/login.component.html
+++ b/nicnbk-ui-angular2/src/app/authentication/view/login.component.html
@@ -22,9 +22,10 @@
                 </div>
                 <div class="form-group input-group" style="width: 300px">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input class="form-control" type="password" name="2fa code" placeholder="Enter 6-digit code or 123456"
+                    <input class="form-control" type="password" name="2fa code" placeholder="6-digit code*"
                            [(ngModel)]="user.otp"/>
                 </div>
+                <div>*leave blank if you haven't enabled MFA</div>
                 <div><button type="submit" class="btn btn-def btn-block" style="width: 300px">Sign In</button></div>
             </form>
             <br/>
