--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.component.html
@@ -30,15 +30,6 @@
     </div>
     <br/>
     <div class="row withpadding" style="position: relative; min-height: 80px;">
-        <!--<div class="row pull-right">-->
-            <!--<ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">-->
-                <!--<li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>-->
-                <!--<li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">-->
-                    <!--<a (click)="search(i)">{{i}}</a>-->
-                <!--</li>-->
-                <!--<li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>-->
-            <!--</ul>-->
-        <!--</div>-->
         <table [ngBusy]="busy" class="table table-hover">
             <thead>
             <tr>
@@ -64,20 +55,17 @@
                 <td (click)="navigate(record.id)">{{record.lookbackAUM}}</td>
                 <td (click)="navigate(record.id)">{{record.startDate}}</td>
                 <td>
-                    &nbsp;<span *ngIf="!record.editable" class="glyphicon glyphicon-lock" (click)="navigate(record.id)"></span>
+<!--                    &nbsp;<span *ngIf="!record.editable" class="glyphicon glyphicon-lock" (click)="navigate(record.id)"></span>-->
+                    <button *ngIf="!record.editable" [disabled]="true" class="btn btn-xs btn-default" (click)="navigate(record.id)">
+                        <span class="glyphicon glyphicon-lock"></span>
+                    </button>
                     <button *ngIf="record.editable" class="btn btn-danger btn-xs" (click)="deleteFilteredResult(record.id)">
                         <span class="glyphicon glyphicon-trash"></span>
                     </button>
                 </td>
-                <!--<td width="5%">-->
-                    <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
-                <!--</td>-->
             </tr>
             </tbody>
         </table>
-
-
-
         <!--</div>-->
         <!--<div class="row pull-right">-->
             <!--<ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">-->
