--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
@@ -101,16 +101,19 @@
         <div class="row form-group">
             <label class="control-label col-sm-2">Status:</label>
             <div class="col-sm-2">
-                <button *ngIf="employee.locked == null || !employee.locked" class="btn btn-xs btn-success" (click)="employee.locked = true" disabled>UNLOCKED</button>
-                <button *ngIf="employee.locked != null && employee.locked" class="btn btn-xs btn-danger" (click)="employee.locked = false" disabled>LOCKED</button>
+                <button *ngIf="employee.locked == null || !employee.locked" class="btn btn-xs btn-success" (click)="employee.locked = true">UNLOCKED</button>
+                <button *ngIf="employee.locked != null && employee.locked" class="btn btn-xs btn-danger" (click)="employee.locked = false; employee.failedLoginAttempts = 0">LOCKED</button>
             </div>
-            <label class="control-label col-sm-8"># failed login attempts: {{employee.failedLoginAttempts == null ? 0 : employee.failedLoginAttempts}}</label>
+            <label class="control-label col-sm-3"># failed login attempts: {{employee.failedLoginAttempts == null ? 0 : employee.failedLoginAttempts}}</label>
+            <!--<div class="col-sm-5">-->
+                <!--<button class="btn btn-xs btn-default" (click)="employee.failedLoginAttempts = 0">Reset counter</button>-->
+            <!--</div>-->
         </div>
         <div class="row form-group">
             <label class="control-label col-sm-2">MFA:</label>
             <div class="col-sm-10">
-                <button *ngIf="employee.mfaEnabled == null || !employee.mfaEnabled" class="btn btn-xs btn-danger" (click)="employee.mfaEnabled = true" disabled>DISABLED</button>
-                <button *ngIf="employee.mfaEnabled != null && employee.mfaEnabled" class="btn btn-xs btn-success" (click)="employee.mfaEnabled = false" disabled>ENABLED</button>
+                <button *ngIf="employee.mfaEnabled == null || !employee.mfaEnabled" class="btn btn-xs btn-danger" (click)="employee.mfaEnabled = true">DISABLED</button>
+                <button *ngIf="employee.mfaEnabled != null && employee.mfaEnabled" class="btn btn-xs btn-success" (click)="employee.mfaEnabled = false">ENABLED</button>
             </div>
         </div>
         <hr style="border-top: 1px solid #B5AEAE"/>
